Drop support for legacy modes: DEVICE_DALVIK, DEVICE_ART_KITKAT, HOST_DALVIK, HOST_ART_KITKAT.
Change-Id: I62825c2055e6865d531bf549e1a75177c0103b74